[package]
name = "quickjs_runtime"
version = "0.15.3"
authors = ["Andries Hiemstra <andries@hiemstra-software.nl>"]
edition = "2021"
description = "Wrapper API and utils for the QuickJS JavaScript engine with support for Promise, Modules, Async/await"
homepage = "https://github.com/HiRoFa/quickjs_es_runtime"
keywords = ["quickjs", "javascript", "runtime", "async", "engine"]
repository = "https://github.com/HiRoFa/quickjs_es_runtime"
license = "MIT"
documentation = "https://hirofa.github.io/quickjs_es_runtime/quickjs_runtime/index.html"
readme = "README.md"
categories = ["development-tools"]

[features]
default = ["console", "setimmediate", "setinterval", "settimeout", "typescript", "bellard"]
console = []
settimeout = []
setinterval = []
setimmediate = []
typescript = ["swc", "swc_common", "swc_atoms", "swc_cached", "swc_macros_common", "swc_eq_ignore_macros", "swc_visit", "swc_visit_macros", "swc_config", "swc_config_macro", "swc_ecma_codegen", "swc_ecma_ast", "swc_ecma_codegen_macros", "swc_ecma_ext_transforms", "swc_ecma_utils", "swc_ecma_visit", "swc_ecma_lints", "swc_ecma_loader", "swc_ecma_minifier", "swc_ecma_parser", "swc_error_reporters", "swc_fast_graph", "swc_ecma_usage_analyzer", "swc_timer", "swc_ecma_preset_env", "swc_ecma_transforms", "swc_ecma_transforms_base", "swc_ecma_transforms_compat", "swc_ecma_transforms_classes", "swc_ecma_transforms_module", "swc_ecma_transforms_optimization", "swc_ecma_transforms_proposal", "swc_ecma_transforms_macros", "swc_ecma_transforms_react", "swc_ecma_transforms_typescript"]#, "swc_node_comments"]#, "swc_trace_macro"]
bellard = ["libquickjs-sys/bellard"]
quickjs-ng = ["libquickjs-sys/quickjs-ng"]

[dependencies]
hirofa_utils = "0.7"
#hirofa_utils = {path="../utils"}
#hirofa_utils = {git="https://github.com/SreeniIO/utils.git"}
#hirofa_utils = {git="https://github.com/HiRoFa/utils"}
backtrace = "0.3"

#libquickjs-sys = {package="hirofa-quickjs-sys", git='https://github.com/HiRoFa/quickjs-sys'}
#libquickjs-sys = { package = "hirofa-quickjs-sys", path = '../quickjs-sys', default-features = false }
libquickjs-sys = { package = "hirofa-quickjs-sys", version = "0.10.0", default-features = false }
lazy_static = "1.5.0"
log = "0.4"
num_cpus = "1"
rand = "0.8"
thread-id = "5"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
string_cache = "0.8"
flume = { version = "0.11", features = ["async"] }
either = "1"
lru = "0.14.0"
anyhow = "1"
#swc
# like the good people at denoland said:
# "swc's version bumping is very buggy and there will often be patch versions
# published that break our build, so we pin all swc versions to prevent
# pulling in new versions of swc crates"
# see https://github.com/denoland/deno_ast/blob/main/Cargo.toml
swc = { version = "=16.1.1", optional = true }
swc_atoms = { version = "=5.0.0", optional = true }
swc_cached = { version = "=2.0.0", optional = true }
swc_common = { version = "=8.0.1", optional = true, features = ["tty-emitter"] }
swc_macros_common = { version = "=1.0.0", optional = true }
swc_eq_ignore_macros = { version = "=1.0.0", optional = true }
swc_visit = { version = "=2.0.0", optional = true }
swc_visit_macros = { version = "=0.5.13", optional = true }
swc_config = { version = "=2.0.0", optional = true }
swc_config_macro = { version = "=1.0.0", optional = true }
swc_ecma_codegen = { version = "=8.0.2", optional = true }
swc_ecma_ast = { version = "=8.1.0", optional = true }
swc_ecma_codegen_macros = { version = "=1.0.1", optional = true }
swc_ecma_ext_transforms = { version = "=11.0.0", optional = true }
swc_ecma_utils = { version = "=11.0.0", optional = true }
swc_ecma_visit = { version = "=8.0.0", optional = true }
swc_ecma_lints = { version = "=11.0.1", optional = true }
swc_ecma_loader = { version = "=8.0.0", optional = true }
swc_ecma_minifier = { version = "=12.4.0", optional = true }
swc_ecma_parser = { version = "=10.0.2", optional = true }
swc_error_reporters = { version = "=9.1.1", optional = true }
swc_fast_graph = { version = "=9.0.0", optional = true }
swc_ecma_usage_analyzer = { version = "=12.0.2", optional = true }
swc_timer = { version = "=1.0.0", optional = true }
swc_ecma_preset_env = { version = "=14.0.0", optional = true }
swc_ecma_transforms = { version = "=14.0.0", optional = true }
swc_ecma_transforms_base = { version = "=11.2.0", optional = true }
swc_ecma_transforms_compat = { version = "=12.0.0", optional = true }
swc_ecma_transforms_classes = { version = "=11.0.0", optional = true }
swc_ecma_transforms_module = { version = "=12.1.0", optional = true }
swc_ecma_transforms_optimization = { version = "=11.1.0", optional = true }
swc_ecma_transforms_proposal = { version = "=11.0.2", optional = true }
swc_ecma_transforms_macros = { version = "=1.0.0", optional = true }
swc_ecma_transforms_react = { version = "=12.0.1", optional = true }
swc_ecma_transforms_typescript = { version = "=12.0.1", optional = true }
swc_node_comments = { version = "=8.0.0", optional = true }
#swc_trace_macro = {version="=2.0.0", optional=true}


#swc_ecma_parser = {version = "0.136.4", optional = true}
#swc_common = {version = "0.31.13", features = ["tty-emitter"], optional = true}
#swc_ecma_minifier = {version = "0.183.17", optional = true}

[dev-dependencies]
#green_copper_runtime =  { git = 'https://github.com/HiRoFa/GreenCopperRuntime', branch="main", features = ["console"]}
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-log = "0.1"
tracing-gelf = "0.7"
simple-logging = "2.0.2"
tokio = { version = "1", features = ["macros"] }


[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default


# features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
